--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ twitter_username: mikah1337
 github_username: mikah1337
 minimal_mistakes_skin: contrast
 search: true
+teaser: assets/images/mm-home-page-feature.jpg
+masthead_title: "My Custom Title"
+breadcrumbs: true
 
 # Build settings
 markdown: kramdown
@@ -99,6 +102,7 @@ defaults:
       comments: true
       share: true
       related: true
+      show_date: true
   # _pages
   - scope:
       path: "_pages"
