--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      #author_profile: true
 
 category_archive:
   type: liquid
