--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: true
       share: true
@@ -114,7 +114,7 @@ defaults:
       type: pages
     values:
       layout: single
-      #author_profile: true
+      author_profile: true
 
 category_archive:
   type: liquid
