--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ plugins:
 author:
   name   : "Micah Mitchell"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "My awesome biography constrained to a sentence or two goes here. Blaahh"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -114,7 +114,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
 
 category_archive:
   type: liquid
