--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ plugins:
 author:
   name   : "Micah Mitchell"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here. Blaahh"
+  bio    : "My awesome biography constrained to a sentence or two goes here. Blaah arg"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -99,7 +99,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: false
