--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ twitter_username: mikah1337
 github_username: mikah1337
 minimal_mistakes_skin: contrast
 search: true
-teaser: assets/images/mm-home-page-feature.jpg
+teaser: /assets/images/mm-home-page-feature.jpg
 # masthead_title: "My Custom Title"
 subtitle: "Test subtitle"
 breadcrumbs: true
@@ -31,6 +31,16 @@ breadcrumbs: true
 toc: true
 toc_label: "My Table of Contents"
 toc_icon: "cog"
+
+# Header settings
+excerpt: "This post should [...]"
+header:
+  overlay_image: /assets/images/mm-home-page-feature.jpg
+  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  actions:
+    - label: "Download"
+      url: "https://github.com"
 
 # Build settings
 markdown: kramdown
